--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
-                        <h4 class="h4 mb-4 text-black">98<sup>th</sup> Western Economic Association International (WEAI) Annual Conference (2023; Scheduled)</h4>
+                        <h4 class="h4 mb-4 text-black">Western Economic Association International (WEAI) Annual Conference (2023; Scheduled)</h4>
                         <h5 class="h5 mb-5"><a>Oral Presentation in Concurrent Session</a></h5>
                         <h5 class="h5 mb-5">San Diego (CA), the U.S.</a></h5>
                     </div>
@@ -485,7 +485,7 @@
 
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
-                        <h4 class="h4 mb-4 text-black">98<sup>th</sup> Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2023; Scheduled)</h4>
+                        <h4 class="h4 mb-4 text-black">Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2023; Scheduled)</h4>
                         <h5 class="h5 mb-5"><a>Oral Presentation in Concurrent Session</a></h5>
                         <h5 class="h5 mb-5">Portland (ME), the U.S.</a></h5>
                     </div>
@@ -493,7 +493,7 @@
 
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
-                        <h4 class="h4 mb-4 text-black">98<sup>th</sup> London School of Economics and Political Science (LSE) Environment Day (2023)</h4>
+                        <h4 class="h4 mb-4 text-black">London School of Economics and Political Science (LSE) Environment Day (2023)</h4>
                         <h5 class="h5 mb-5"><a href="https://www.lse-environment-week.com/environment-day">Oral Presentation in Long-Talk Session</a></h5>
                         <h5 class="h5 mb-5">London, the United Kingdom</a></h5>
                     </div>
@@ -501,7 +501,7 @@
     
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
-                        <h4 class="h4 mb-4 text-black">42<sup>nd</sup> International Association for Energy Economics (IAEE) International Conference (2019)</h4>
+                        <h4 class="h4 mb-4 text-black">International Association for Energy Economics (IAEE) International Conference (2019)</h4>
                         <h5 class="h5 mb-5"><a href="https://www.iaee.org/proceedings/article/16312">Oral Presentation in Concurrent Session</a></h5>
                         <h5 class="h5 mb-5">Montréal, Canada</a></h5>
                     </div>
@@ -509,7 +509,7 @@
 
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
-                        <h4 class="h4 mb-4 text-black">41<sup>st</sup> International Association for Energy Economics (IAEE) International Conference (2018)</h4>
+                        <h4 class="h4 mb-4 text-black">International Association for Energy Economics (IAEE) International Conference (2018)</h4>
                         <h5 class="h5 mb-5"><a href="https://www.iaee.org/proceedings/article/15033">Oral Presentation in Concurrent Session</a></h5>
                         <h5 class="h5 mb-5">Groningen, Netherlands</a></h5>
                     </div>
@@ -517,7 +517,7 @@
 
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
-                        <h4 class="h4 mb-4 text-black">29<sup>th</sup> Production and Operations Management Society (POMS) Annual Conference (2018)</h4>
+                        <h4 class="h4 mb-4 text-black">Production and Operations Management Society (POMS) Annual Conference (2018)</h4>
                         <h5 class="h5 mb-5"><a>Oral Presentation in Invited Session</a></h5>
                         <h5 class="h5 mb-5">Houston (TX), the U.S.</h5>
                     </div>
