--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.business.kaist.edu/">Korea Advanced Institute of Science and Technology (KAIST)</a></h3>
+                        <h3 class="h3 mb-4"><a href="https://www.business.kaist.edu/">Korea Advanced Institute of Science and Technology</a></h3>
                         <h5 class="h5 mb-4 text-black">M.S. in Green Business and Policy, Feb 2019</h5>
-                        <ul class="list-unstyled ul-check success">
+                        <!-- <ul class="list-unstyled ul-check success">
                             <li><em>Honors with Master's Thesis</em></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
 
@@ -262,9 +262,9 @@
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
                         <h3 class="h3 mb-4"><a href="https://www.yonsei.ac.kr/en_sc/index.jsp">Yonsei University</a></h3>
                         <h5 class="h5 mb-4 text-black">B.S. in Chemical Engineering, Feb 2017</h5>
-                        <ul class="list-unstyled ul-check success">
+                        <!-- <ul class="list-unstyled ul-check success">
                             <li><em>Honors with Academic Excellence</em></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
 
@@ -357,8 +357,7 @@
                 <div class="row">
                     <div class="col-12" data-aos="fade-up">
                         <ul class="list-unstyled ul-check success text-black">
-                            <li><b>M. Hyun</b> (2023), “Fossil Fuels and Fiscal Federalism: Evidence from the U.S. Coal Declines”</a>,
-                                <em>Working Paper</em>.
+                            <li><b>M. Hyun</b> (2023), “Fossil Fuels and Fiscal Federalism: Evidence from the US Coal Declines”</a>.
                             </li>
                             
                             <li>M. Anderson, <b>M. Hyun</b>, and J. Lee (2022), <a href="https://www.nber.org/papers/w29637">“Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts”</a>,
@@ -392,6 +391,7 @@
                         <h5 class="h5 mb-4 text-black">Spring 2022:  <a href="teaching_22s.html">[ECON 115] Environmental Economics</a></h5>
                         <!-- <h3 class="h3 mb-4 text-black">2022 - 2023</h3> -->
                         <h5 class="h5 mb-4 text-black">Winter 2023:  <a href="teaching_23w.html">[ECON 10A] Intermediate Microeconomic Theory</a></h5>
+                        <h5 class="h5 mb-4 text-black">Fall 2023:  <a href="teaching_23f.html">[ECON 106] Managerial Economics</a></h5>
                     </div>
                 </div>
 
@@ -417,11 +417,11 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://emlab.ucsb.edu/">Environmental Markets Lab (emLab), UCSB</a></h3>
+                        <h5 class="h5 mb-4"><a href="https://emlab.ucsb.edu/">Environmental Markets Lab (emLab), UCSB</a></h5>
                         <h5 class="h5 mb-4 text-black">Graduate Student Researcher</h5>
-                        <ul class="list-unstyled ul-check success">         
+                        <!-- <ul class="list-unstyled ul-check success">         
                             <li>Project Title: "<a href="https://emlab.ucsb.edu/programs/climate-energy">Estimating the Effect of Environmental Policy on Welfare Inequality</a>"</li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
 
@@ -436,12 +436,12 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://minwoo-hyun.github.io/#experience-section">Sustainable Development Research Center, KAIST</a></h3>
+                        <h5 class="h5 mb-4"><a href="https://minwoo-hyun.github.io/#experience-section">Sustainable Development Research Center, KAIST</a></h5>
                         <h5 class="h5 mb-4 text-black">Research Associate</h5>
-                        <ul class="list-unstyled ul-check success">         
+                        <!-- <ul class="list-unstyled ul-check success">         
                             <li>Project Title: "Load Impact Evaluation for a Korean Peak Time Rebate Pilot with Residential and Small Commercial and Industrial Customers" (<a href="https://www.epri.com/research/products/000000003002016695">Technical Report</a>)</li>
                             <li>Project Title: "<a href="https://cordis.europa.eu/project/id/821471">Exploring National and Global Actions to reduce Greenhouse gas Emissions</a>"</li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
 
@@ -456,7 +456,7 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="http://kaistceps.quv.kr">Climate and Energy Policy & Strategy Research Group, KAIST</a></h3>
+                        <h5 class="h5 mb-4"><a href="http://kaistceps.quv.kr">Climate and Energy Policy & Strategy Research Group, KAIST</a></h5>
                         <h5 class="h5 mb-4 text-black">Research Assistant</h5>
                         <!-- <ul class="list-unstyled ul-check success">
                             <li>TBD</li>
