--- a/index.html
+++ b/index.html
@@ -328,15 +328,15 @@
                     <div class="col-12" data-aos="fade-up">
                         <ul class="list-unstyled ul-check success text-black">
                             <li><b>M. Hyun</b>, A. Cherp, J. Jewell, Y. Kim, and J. Eom (2023), <a href="https://doi.org/10.1016/j.rset.2023.100050">“Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea”</a>,
-                                <em>Renewable and Sustainable Energy Transition</em>, 3, 100050.
+                                <em>Renewable and Sustainable Energy Transition</em>
                             </li>
 
                             <li>J. Eom, <b>M. Hyun</b>, J. Lee, and H. Lee (2020), <a href="https://doi.org/10.1038/s41560-020-00698-1">“Increase in household energy consumption due to ambient air pollution”</a>,
-                                <em>Nature Energy</em>, 1-9.
+                                <em>Nature Energy</em>
                             </li>
 
                             <li><b>M. Hyun</b>, Y. Kim, and J. Eom (2020), <a href="https://doi.org/10.1016/j.enpol.2020.111918">“Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment”</a>,
-                                <em>Energy Policy</em>, 147, 111918.
+                                <em>Energy Policy</em>
                             </li>
 
                         </ul>
@@ -357,11 +357,14 @@
                 <div class="row">
                     <div class="col-12" data-aos="fade-up">
                         <ul class="list-unstyled ul-check success text-black">
-                            <li><b>M. Hyun</b> (2023), “Fossil Fuels and Fiscal Federalism: Evidence from the US Coal Declines”</a>.
+                            <li><b>M. Hyun</b> (2024), “Fossil Fuels and Fiscal Federalism: Evidence from the US Coal Declines”</a>
+                            </li>
+
+                            <li><b>M. Hyun</b> (2024), “Does School Spending Affect Juvenile Crime? Evidence from the US Coal Communities”</a>
                             </li>
                             
                             <li>M. Anderson, <b>M. Hyun</b>, and J. Lee (2022), <a href="https://www.nber.org/papers/w29637">“Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts”</a>,
-                                <em>NBER Working Paper</em>, 29637.
+                                Revise and Resubmit, <em>The Economic Journal</em>
                             </li>
                             
                         </ul>
@@ -392,6 +395,7 @@
                         <!-- <h3 class="h3 mb-4 text-black">2022 - 2023</h3> -->
                         <h5 class="h5 mb-4 text-black">Winter 2023:  <a href="teaching_23w.html">[ECON 10A] Intermediate Microeconomic Theory</a></h5>
                         <h5 class="h5 mb-4 text-black">Fall 2023:  <a href="teaching_23f.html">[ECON 106] Managerial Economics</a></h5>
+                        <h5 class="h5 mb-4 text-black">Winter 2024:  <a href="teaching_24w.html">[ECON 150A] Labor Economics</a></h5>
                     </div>
                 </div>
 
