updatee_special_sworn

--- a/index.html
+++ b/index.html
@@ -374,39 +374,30 @@
             </div>
         </section>
 
-        <section class="site-section bg-light" id="teaching-section">
-            <div class="container">
-                <div class="row mb-5">
-                    <div class="col-12 text-center" data-aos="fade-up">
-                        <h2 class="section-title mb-3">Teaching</h2>
-                    </div>
-                </div>
-    
-                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
-                    <div class="col-12">
-                        <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
-                        <h5 class="h5 mb-4 text-black">Fall 2020:  <a href="teaching_20f.html">[ECON 10A] Intermediate Microeconomic Theory</a></h5>
-                        <h5 class="h5 mb-4 text-black">Winter 2021:  <a href="teaching_21w.html">[ECON 2] Principles of Macroeconomics</a></h5>
-                        <h5 class="h5 mb-4 text-black">Spring 2021:  <a href="teaching_21s.html">[ECON 2] Principles of Macroeconomics</a></h5>
-                        <!-- <h3 class="h3 mb-4 text-black">2021 - 2022</h3> -->
-                        <h5 class="h5 mb-4 text-black">Fall 2021:  <a href="teaching_21f.html">[ECON 106] Managerial Economics</a></h5>
-                        <h5 class="h5 mb-4 text-black">Winter 2022:  <a href="teaching_22w.html">[ECON 115] Environmental Economics</a></h5>
-                        <h5 class="h5 mb-4 text-black">Spring 2022:  <a href="teaching_22s.html">[ECON 115] Environmental Economics</a></h5>
-                        <!-- <h3 class="h3 mb-4 text-black">2022 - 2023</h3> -->
-                        <h5 class="h5 mb-4 text-black">Winter 2023:  <a href="teaching_23w.html">[ECON 10A] Intermediate Microeconomic Theory</a></h5>
-                        <h5 class="h5 mb-4 text-black">Fall 2023:  <a href="teaching_23f.html">[ECON 106] Managerial Economics</a></h5>
-                        <h5 class="h5 mb-4 text-black">Winter 2024:  <a href="teaching_24w.html">[ECON 150A] Labor Economics</a></h5>
-                    </div>
-                </div>
-
-            </div>
-        </section>
-
         <section class="site-section" id="experience-section">
             <div class="container">
                 <div class="row mb-5 justify-content-center">
                     <div class="col-12 text-center" data-aos="fade">
                         <h2 class="section-title mb-3">Experience</h2>
+                    </div>
+                </div>
+
+                <div class="row" data-aos="fade-up" data-aos-delay="">
+                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
+                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
+                        </h2>
+                    </div>
+
+                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
+                        <p>Mar 2024 - Present</p>
+                    </div>
+
+                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
+                        <h5 class="h5 mb-4"><a href="https://emlab.ucsb.edu/">U.S. Census Bureau</a></h5>
+                        <h5 class="h5 mb-4 text-black">Special Sworn Researcher</h5>
+                        <!-- <ul class="list-unstyled ul-check success">         
+                            <li>Project Title: "<a href="https://emlab.ucsb.edu/programs/climate-energy">Estimating the Effect of Environmental Policy on Welfare Inequality</a>"</li>
+                        </ul> -->
                     </div>
                 </div>
 
@@ -518,6 +509,34 @@
                     <div class="col-12">
                         <h5 class="h5 mb-4 text-black">Production and Operations Management Society (POMS) Annual Conference (2018)</h5>
                         <h5 class="h5 mb-5"><a>Oral Presentation in Invited Session</a>; Houston (TX), the United States</h5>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="site-section bg-light" id="teaching-section">
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col-12 text-center" data-aos="fade-up">
+                        <h2 class="section-title mb-3">Teaching</h2>
+                    </div>
+                </div>
+    
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
+                        <h5 class="h5 mb-4 text-black">Fall 2020:  <a href="teaching_20f.html">[ECON 10A] Intermediate Microeconomic Theory</a></h5>
+                        <h5 class="h5 mb-4 text-black">Winter 2021:  <a href="teaching_21w.html">[ECON 2] Principles of Macroeconomics</a></h5>
+                        <h5 class="h5 mb-4 text-black">Spring 2021:  <a href="teaching_21s.html">[ECON 2] Principles of Macroeconomics</a></h5>
+                        <!-- <h3 class="h3 mb-4 text-black">2021 - 2022</h3> -->
+                        <h5 class="h5 mb-4 text-black">Fall 2021:  <a href="teaching_21f.html">[ECON 106] Managerial Economics</a></h5>
+                        <h5 class="h5 mb-4 text-black">Winter 2022:  <a href="teaching_22w.html">[ECON 115] Environmental Economics</a></h5>
+                        <h5 class="h5 mb-4 text-black">Spring 2022:  <a href="teaching_22s.html">[ECON 115] Environmental Economics</a></h5>
+                        <!-- <h3 class="h3 mb-4 text-black">2022 - 2023</h3> -->
+                        <h5 class="h5 mb-4 text-black">Winter 2023:  <a href="teaching_23w.html">[ECON 10A] Intermediate Microeconomic Theory</a></h5>
+                        <h5 class="h5 mb-4 text-black">Fall 2023:  <a href="teaching_23f.html">[ECON 106] Managerial Economics</a></h5>
+                        <h5 class="h5 mb-4 text-black">Winter 2024:  <a href="teaching_24w.html">[ECON 150A] Labor Economics</a></h5>
                     </div>
                 </div>
 
