--- a/index.html
+++ b/index.html
@@ -529,10 +529,10 @@
                         <h5 class="h5 mb-4 text-black">Fall 2020; Winter 2023:  <a>[ECON 10A] Intermediate Microeconomic Theory</a></h5>
                         <h5 class="h5 mb-4 text-black">Winter 2021; Spring 2021:  <a>[ECON 2] Principles of Macroeconomics</a></h5>
                         <!-- <h3 class="h3 mb-4 text-black">2021 - 2022</h3> -->
-                        <h5 class="h5 mb-4 text-black">Fall 2021; Fall 2023; Spring 2023:  <a>[ECON 106] Managerial Economics</a></h5>
+                        <h5 class="h5 mb-4 text-black">Fall 2021; Fall 2023; Spring 2024:  <a>[ECON 106] Managerial Economics</a></h5>
                         <h5 class="h5 mb-4 text-black">Winter 2022; Spring 2022:  <a>[ECON 115] Environmental Economics</a></h5>
                         <!-- <h3 class="h3 mb-4 text-black">2022 - 2023</h3> -->
-                        <h5 class="h5 mb-4 text-black">Winter 2024:  <a href="teaching_24w.html">[ECON 150A] Labor Economics</a></h5>
+                        <h5 class="h5 mb-4 text-black">Winter 2024:  <a>[ECON 150A] Labor Economics</a></h5>
                     </div>
                 </div>
 
