--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                     </div>
                     <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
-                            <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3>
-                            <p>I am a Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to health, inequality, and development. I am currently studying the local fiscal conditions and labor reallocation costs of coal decline, crime and health impacts in coal-rich communities, and the welfare consequences of pollution alerts. </p>
+                            <!-- <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3> -->
+                            <p>I am a Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to labor, health, and inequality. I am currently studying the economic costs of energy transition such as labor reallocation costs of fossil fuel workers and fiscal rupture in coal-rich local governments. </p>
                         </div>
 
                         <!-- <div class="mb-4">
@@ -436,25 +436,6 @@
                         <!-- <ul class="list-unstyled ul-check success">         
                             <li>Project Title: "Load Impact Evaluation for a Korean Peak Time Rebate Pilot with Residential and Small Commercial and Industrial Customers" (<a href="https://www.epri.com/research/products/000000003002016695">Technical Report</a>)</li>
                             <li>Project Title: "<a href="https://cordis.europa.eu/project/id/821471">Exploring National and Global Actions to reduce Greenhouse gas Emissions</a>"</li>
-                        </ul> -->
-                    </div>
-                </div>
-
-                <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
-
-                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Jul 2017 - Jan 2019</p>
-                    </div>
-
-                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h5 class="h5 mb-4"><a href="http://kaistceps.quv.kr">Climate and Energy Policy & Strategy Research Group, KAIST</a></h5>
-                        <h5 class="h5 mb-4 text-black">Research Assistant</h5>
-                        <!-- <ul class="list-unstyled ul-check success">
-                            <li>TBD</li>
                         </ul> -->
                     </div>
                 </div>
