--- a/index.html
+++ b/index.html
@@ -451,48 +451,30 @@
                     </div>
                 </div>
 
-                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
-                    <div class="col-12">
-                        <h5 class="h5 mb-4 text-black">Western Economic Association International (WEAI) Annual Conference (2023)</h5>
-                        <h5 class="h5 mb-5"><a href="https://weai.org/conferences/view/13/98th-Annual-Conference">Oral Presentation in Concurrent Session</a>; San Diego (CA), the United States</h5>
-                    </div>
-                </div>
+                <div class="row">
+                    <div class="col-12" data-aos="fade-up">
+                        <ul class="list-unstyled ul-check success text-black">
+                            <li><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b>; Oral Presentation; Cambridge (MA), the United States
+                            </li>
 
-                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
-                    <div class="col-12">
-                        <h5 class="h5 mb-4 text-black">Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2023)</h5>
-                        <h5 class="h5 mb-5"><a href="https://aere.memberclicks.net/aere-2023-summer-conference">Oral Presentation in Concurrent Session</a>; Portland (ME), the United States</h5>
-                    </div>
-                </div>
+                            <li><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2024)</b>; Oral Presentation in Concurrent Session; Washington (DC), the United States
+                            </li>
 
-                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
-                    <div class="col-12">
-                        <h5 class="h5 mb-4 text-black">London School of Economics and Political Science (LSE) Environment Day (2023)</h5>
-                        <h5 class="h5 mb-5"><a href="https://www.lse-environment-week.com/environment-day">Oral Presentation in Long-Talk Session</a>; London, the United Kingdom</h5>
-                    </div>
-                </div>
-    
-                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
-                    <div class="col-12">
-                        <h5 class="h5 mb-4 text-black">International Association for Energy Economics (IAEE) International Conference (2019)</h5>
-                        <h5 class="h5 mb-5"><a href="https://www.iaee.org/proceedings/article/16312">Oral Presentation in Concurrent Session</a>; Montréal, Canada</h5>
-                    </div>
-                </div>
+                            <li><b>Western Economic Association International (WEAI) Annual Conference (2023)</b>; Oral Presentation in Concurrent Session; San Diego (CA), the United States
+                            </li>
 
-                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
-                    <div class="col-12">
-                        <h5 class="h5 mb-4 text-black">International Association for Energy Economics (IAEE) International Conference (2018)</h5>
-                        <h5 class="h5 mb-5"><a href="https://www.iaee.org/proceedings/article/15033">Oral Presentation in Concurrent Session</a>; Groningen, Netherlands</h5>
+                            <li><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2023)</b>; Oral Presentation in Concurrent Session; Portland (ME), the United States
+                            </li>
+
+                            <li><b>London School of Economics and Political Science (LSE) Environment Day (2023)</b>; Oral Presentation in Long-Talk Session; London, the United Kingdom
+                            </li>
+
+                            <li><b>London School of Economics and Political Science (LSE) Environment Day (2023)</b>; Oral Presentation in Long-Talk Session; London, the United Kingdom
+                            </li>
+
+                        </ul>
                     </div>
                 </div>
-
-                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
-                    <div class="col-12">
-                        <h5 class="h5 mb-4 text-black">Production and Operations Management Society (POMS) Annual Conference (2018)</h5>
-                        <h5 class="h5 mb-5"><a>Oral Presentation in Invited Session</a>; Houston (TX), the United States</h5>
-                    </div>
-                </div>
-
             </div>
         </section>
 
