--- a/index.html
+++ b/index.html
@@ -78,34 +78,27 @@
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                                 <li><a href="#home-section" class="nav-link">Home</a></li>
 
-                                <li class="has-children">
+                                <!-- <li class="has-children">
                                     <a href="#about-section" class="nav-link">About Me</a>
                                     <ul class="dropdown">
                                         <li><a href="#education-section" class="nav-link">Education</a></li>
                                     </ul>
-                                </li>
+                                </li> -->
 
                                 <li class="has-children">
-                                    <a href="#publication-section" class="nav-link">Publications</a>
-
+                                    <a href="#wp-section" class="nav-link">Research</a>
                                     <ul class="dropdown">
                                         <li><a href="#wp-section" class="nav-link">Working Papers</a></li>
+                                        <li><a href="#publication-section" class="nav-link">Publications</a></li>
                                     </ul>
                                 </li>
+
+                                <li><a href="#pt-section" class="nav-link">Presentations</a></li>
 
                                 <li><a href="#teaching-section" class="nav-link">Teaching</a></li>
 
-                                <li class="has-children">
-                                    <a href="#experience-section" class="nav-link">Experience</a>
-
-                                    <ul class="dropdown">
-                                        <li><a href="#pt-section" class="nav-link">Presentations</a></li>
-                                        <li><a href="#skill-section" class="nav-link">Programming Skills</a></li>
-                                        <!-- <li><a href="#honors-section" class="nav-link">Honors & Awards</a></li> -->
-                                    </ul>
-                                </li>
                                 <!-- <li><a href="#skill-section" class="nav-link">Computer Skills</a></li> -->
-                                <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                                <!-- <li><a href="#contact-section" class="nav-link">Contact</a></li> -->
                             </ul>
                         </nav>
                     </div>
@@ -162,7 +155,7 @@
                     <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
                             <!-- <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3> -->
-                            <p>I am a Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to labor, health, and inequality. I am currently studying the economic costs of energy transition such as labor reallocation costs of fossil fuel workers and fiscal rupture in coal-rich local governments. </p>
+                            <p>I am a Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to labor, health, and inequality. I am currently studying the economic costs of energy transition such as labor reallocation costs of fossil fuel workers and fiscal rupture in coal-rich local governments.</p>
                         </div>
 
                         <!-- <div class="mb-4">
@@ -249,23 +242,15 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-12" data-aos="fade-up">
-                        <ul class="list-unstyled ul-check success text-black">
-                            <li><b>M. Hyun</b>, A. Cherp, J. Jewell, Y. Kim, and J. Eom (2023), <a href="https://doi.org/10.1016/j.rset.2023.100050">“Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea”</a>,
-                                <em>Renewable and Sustainable Energy Transition</em>
-                            </li>
-
-                            <li>J. Eom, <b>M. Hyun</b>, J. Lee, and H. Lee (2020), <a href="https://doi.org/10.1038/s41560-020-00698-1">“Increase in household energy consumption due to ambient air pollution”</a>,
-                                <em>Nature Energy</em>
-                            </li>
-
-                            <li><b>M. Hyun</b>, Y. Kim, and J. Eom (2020), <a href="https://doi.org/10.1016/j.enpol.2020.111918">“Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment”</a>,
-                                <em>Energy Policy</em>
-                            </li>
-
-                        </ul>
-
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
+                        <h5 class="h5 mb-4 text-black"><b>M. Hyun</b>, A. Cherp, J. Jewell, Y. Kim, and J. Eom (2023), <a href="https://doi.org/10.1016/j.rset.2023.100050">“Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea”</a>,
+                            <em>Renewable and Sustainable Energy Transition</em></h5>
+                        <h5 class="h5 mb-4 text-black">J. Eom, <b>M. Hyun</b>, J. Lee, and H. Lee (2020), <a href="https://doi.org/10.1038/s41560-020-00698-1">“Increase in household energy consumption due to ambient air pollution”</a>,
+                            <em>Nature Energy</em></h5>
+                        <h5 class="h5 mb-4 text-black"><b>M. Hyun</b>, Y. Kim, and J. Eom (2020), <a href="https://doi.org/10.1016/j.enpol.2020.111918">“Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment”</a>,
+                            <em>Energy Policy</em></h5>
                     </div>
                 </div>
             </div>
@@ -290,7 +275,7 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://econ.ucsb.edu/">University of California, Santa Barbara</a></h3>
+                        <h3 class="h5 mb-4"><a href="https://econ.ucsb.edu/">University of California, Santa Barbara</a></h5>
                         <h5 class="h5 mb-4 text-black">Ph.D. Candidate in Economics</h5>
                         <h5 class="h5 mb-4 text-black">M.A. in Economics, Aug 2021</h5>
                         <!-- <ul class="list-unstyled ul-check success"> -->
@@ -438,7 +423,8 @@
 
                 <div class="row">
                     <div class="col-12" data-aos="fade-up">
-                        <ul class="list-unstyled ul-check success text-black">
+                        <!-- <ul class="list-unstyled ul-check success text-black"> -->
+                        <ul class="list-unstyled text-black"></ul>
                             <li><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b>; Oral Presentation; Cambridge (MA), the United States
                             </li>
 
@@ -481,6 +467,7 @@
                         <h5 class="h5 mb-4 text-black">Winter 2022; Spring 2022:  <a>[ECON 115] Environmental Economics</a></h5>
                         <!-- <h3 class="h3 mb-4 text-black">2022 - 2023</h3> -->
                         <h5 class="h5 mb-4 text-black">Winter 2024:  <a>[ECON 150A] Labor Economics</a></h5>
+                        <h5 class="h5 mb-4 text-black">Summer 2024:  <a>[ECON 135] Monetary Economics</a></h5>
                     </div>
                 </div>
 
